--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,13 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: yelp-clone_development
+  database: yelp_clone_dev
   pool: 5
+  <% if ENV["BOXEN_POSTGRESQL_PORT"].blank? %>
   username: postgres
   password: password
+  <% end %>
+  port: <%= ENV["BOXEN_POSTGRESQL_PORT"] || 5432 %>
   host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -47,17 +50,11 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: yelp-clone_test
+  database: yelp_clone_test
   pool: 5
+  <% if ENV["BOXEN_POSTGRESQL_PORT"].blank? %>
   username: postgres
   password: password
-  host: localhost
-
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: yelp-clone_production
-  pool: 5
-  username: postgres
-  password: password
+  <% end %>
+  port: <%= ENV["BOXEN_POSTGRESQL_PORT"] || 5432 %>
   host: localhost
